force-app/main/default/objects/Loyalty_Program_Config__mdt/Loyalty_Program_Config__mdt.object-meta.xml
<CustomObject>
    <description>Stores per-loyalty-program configuration: API program name, currency, enrollment limits. Queried by LoyaltyEnrollmentService and LoyaltyAPIClient.</description>
    <label>Loyalty Program Config</label>
    <pluralLabel>Loyalty Program Configs</pluralLabel>
</CustomObject>