force-app/main/default/objects/Loyalty_Program_Config__mdt/fields/Currency_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_ISO_Code__c</fullName>
    <description>ISO 4217 currency code for points accrual (e.g. USD, CAD, GBP).</description>
    <label>Currency ISO Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>