force-app/main/default/objects/Loyalty_Program_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When false, LoyaltyEnrollmentService throws INVALID_PROGRAM for this configuration.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>