force-app/main/default/objects/Loyalty_Program_Config__mdt/fields/Max_Enrollments_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Max_Enrollments_Per_Day__c</fullName>
    <description>Soft cap on daily enrollments. LoyaltyEnrollmentService logs a warning when exceeded but does not block enrollment.</description>
    <label>Max Enrollments Per Day</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>