force-app/main/default/objects/Loyalty_Program_Config__mdt/fields/Points_Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Points_Expiry_Days__c</fullName>
    <description>Number of days after which inactive points expire. Used by PointsExpiryBatch.</description>
    <label>Points Expiry Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>