force-app/main/default/objects/Loyalty_Program_Config__mdt/fields/Program_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_API_Name__c</fullName>
    <description>Loyalty Cloud program API name used in endpoint paths: /connect/loyalty/programs/{name}/...</description>
    <label>Program API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>